<resources>
    <string name="app_name">MCU-Movies</string>
    <string name="movlist">Movie List</string>
    <string name="movtitle">Movie Title</string>
    <string name="movgenre">Movie Genre</string>
    <string name="movreleaseyear">Release Year</string>
    <string name="movrating">Rating</string>
    <string name="movdirector">Director</string>
    <string name="movlanguage">Language</string>

    <string name="add">Add</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
</resources>
